# budget-butler

./: README.md  budgetbutler.py  pyproject.toml
modules/: config.py  ollama.py  pdf.py
pages/: chat.py
